Rewrote the technical approach section. Still needs more detail to be added.

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \usepackage{commath}
 \usepackage{float}
 \usepackage{units}
+\usepackage{mathtools}
 
 % packages for drawings
 \usepackage{tikz}
@@ -77,6 +78,7 @@
 \newcommand{\p}{\vec{p}}
 \newcommand{\T}{\vec{\tau}}
 \newcommand{\f}{\vec{f}}
+\newcommand{\V}{\vec{V}}
 \newcommand{\tx}[1]{\text{#1}}
 \newcommand{\D}{\bar{\mathcal{D}}}
 
