Added preliminary figures to the results and experiment sections. Made some edits to the technical approach section.

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass{svproc}
-% \usepackage[utf8]{inputenc}
+% \usepackage[utf8]{inputenc
 
 % Required packages by SVProc class
 \usepackage{multicol}
@@ -87,8 +87,8 @@
 
 \begin{document}
 \mainmatter
-\title{Model-Based Control of Parallel Combinations of Fiber-Reinforced Soft Actuators}
-\titlerunning{Model-Based Control of Parallel Combinations of Soft Actuators}
+\title{Model-Based Position Control of Parallel Combinations of Fluid-Driven Soft Actuators}
+\titlerunning{Control of Parallel Combinations of Soft Actuators}
 \author{Daniel Bruder \and C. David Remy \and Ram Vasudevan}
 \tocauthor{Daniel Bruder, C. David Remy, and Ram Vasudevan}
 \authorrunning{Daniel Bruder et al.}
