--- a/sections/insights.tex
+++ b/sections/insights.tex
@@ -1,2 +1,7 @@
 \section{Main Experimental Insights}    \label{sec:insights}
 % Main Experimental Insights
+
+%% Simple models can inform control
+
+%% Feedback is still needed to account for errors in modeling, sysid, etc.
+
