--- a/sections/technical-approach.tex
+++ b/sections/technical-approach.tex
@@ -1,12 +1,15 @@
 \section{Technical Approach}    \label{sec:technical-approach}
 % Technical Approach
 
+%% We control end effector by controlling actuator pressures
+A parallel combination consists of several actuators arranged such that one end is attached to a common ground while the other is attached to a common end effector. We desire to control the position of that end effector by varying the internal pressures inside of the actuators. For a desired end effector position, we use a force balance model to solve for a corresponding set of actuator pressures.
+
 %% End effector forces can be written as a function of pressure and state
-A parallel combination consists of several actuators arranged such that one end is attached to a common ground while the other is attached to a common end effector. With the internal pressure and displacements of the actuators described by state vectors $\p$ and $\q$, respectively, the position and orientation of the end effector described by a state vector $\x$, and assuming that an inverse kinematics function $\q(\x)$ allows the computation of  $\q$ in terms of $\x$ , the end effector force $\f$ can be expressed in terms of $\x$ and $\p$ as 
+With the internal pressure and displacements of the actuators described by state vectors $\p$ and $\q$, respectively, the position and orientation of the end effector described by a state vector $\x$, and assuming that an inverse kinematics function $\q(\x)$ allows the computation of  $\q$ in terms of $\x$ , the end effector force $\f$ can be expressed in terms of $\x$ and $\p$ as 
 \begin{align}
     \f (\x, \p) &= \J_x^T (\x) \p + \f_{\tx{elast}} \left( \q(\x) \right),
 \end{align}
-where $\J_x = \frac{\partial \vec{V}}{\partial \x}$ is the \emph{fluid Jacobian} which relates the change in volume of the actuators $\V$ to the change in the state of the end effector $\x$.
+where $\J_x = \frac{\partial \vec{V}}{\partial \x}$ is the \emph{fluid Jacobian} which relates the change in volume of the actuators $\V$ to the change in the state of the end effector $\x$ (cite: IROS).
 
 %% Solving for equilibrium points
 This expression enables us to determine the pressure required to actuate the system toward a desired equilibrium state, $\x_\tx{des}$, by solving the following equation for $\p$,
