Added caption to module figure as well as small updates to introduction and technical approach section.

--- a/sections/experiments.tex
+++ b/sections/experiments.tex
@@ -1,18 +1,17 @@
 \section{Experiments Completed/Scheduled}   \label{sec:experiments}
 % Experiments
 
-In order to validate the position control approach proposed in section \ref{sec:technical-approach}, we implement it on two systems. The first is a parallel configuration of three actuators constrained to 2 DOF motion (Figure \ref{fig:modules}a). The second is a parallel combination of four actuators constrained 3 DOF motion (Figure \ref{fig:modules}b).
+In order to validate the position control approach proposed in section \ref{sec:technical-approach}, we conduct experiments on two parallel soft actuator systems. The first consists of three actuators constrained to 2 DOF motion (Figure \ref{fig:modules}a). The second consists of four actuators constrained 3 DOF motion (Figure \ref{fig:modules}b). 
+    So far, all of our experiments have been conducted using the three actuator system.
 
-We choose a set of desired end effector positions, then 
+During the experiments, the pressures inside the actuators are varied using pneumatic pressure regulars (Enfield TR-010-g10-s), and the displacement of the end effector is measured using a motion capture system (Phase Space Impulse X2E).
 
-During the experiments, the pressures inside the actuators are varied using pneumatic pressure regulars (Enfield TR-010-g10-s), and the displacement of the end effector is measured using a motion capture system with active trackers (Phase Space Impulse X2E).
-
-%% figure: the 2dor and 3dof rigs, labeled, side to side
+%% figure: the 2dor and 3dof modules, labeled, side to side
 \begin{figure}
     \centering
     \begin{tikzpicture}
-        \def\colWidth{0.48\linewidth}
-        \matrix [row sep=0.5cm, column sep=0cm, style={align=center}] (my matrix) at (0,0)
+        \def\colWidth{0.4\linewidth}
+        \matrix [row sep=0.5cm, column sep=1cm, style={align=center}] (my matrix) at (0,0)
         {
         \node[style={anchor=center}] {\includegraphics[width=\colWidth, angle=-90]{figures/free3.JPG}};
         &
@@ -20,7 +19,7 @@ During the experiments, the pressures inside the actuators are varied using pneu
         \\
         };
     \end{tikzpicture}
-    \caption{(a) , (b) . \Dan{these pictures are placeholders. Will be replaced with much nicer versions with labels drawn on to show DOFs.}}
+    \caption{(a) A parallel system consisting of three FREE actuators attached to an end effector that is constrained to 2 DOF motion. A linear/rotary ball bearing allows the end effector to translate and rotate about a central shaft, while restricting motion in all other directions. (b) A parallel system consisting of four FREE actuators attached to an end effector that is constrained to 3 DOF motion. A centrally mounted spring-steel shaft  constrains the end effector to move on a 2D sub-manifold of 3D space, while also admitting rotations about its central axis. \Dan{these pictures/captions are placeholders. Will be replaced with much nicer versions with labels drawn on to show DOFs.}}
     \label{fig:modules}
 \end{figure}
 
@@ -34,7 +33,4 @@ During the experiments, the pressures inside the actuators are varied using pneu
 
 
 %% Experiments Scheduled
-
 In future experiments we will apply the same approach to the less constrained system shown in figure \ref{fig:modules}b.
-
-%% figure: 3dof compliant spine rig
