--- a/sections/motivation.tex
+++ b/sections/motivation.tex
@@ -22,19 +22,13 @@ Due to its linear structure, this model enables the efficient numerical calculat
 %The linear structure of this model enables efficient calculation of control inputs given a desired state.
 %% FREEs are customizable and well-suited for parallel combinations
 We demonstrate the efficacy of this approach by controlling the position of an end effector connected to parallel configurations of fiber-reinforced soft actuators, known as Fiber-Reinforced Elastomeric Enclosures (FREEs). 
-FREEs are used due to their versatility, % customizability?  
-since by merely changing the arrangement of a FREE's fiber reinforcements, it can be customized to yield a desired motion or force profile without constraining motion to occur exclusively in the direction of force \cite{bishop2015design, connolly2015mechanical, felt2018closed, krishnan2015kinematics, bishop2013force, bruder2017model, sedal2017constitutive}. This property makes them well suited to be combined in parallel, where the forces of individual actuators are superimposed to generate a multidimensional spacial force (cite IROS). 
-\Dan{I want it to be clear that the approach we use is not specific to FREEs, we have just chosen them to demonstrate our model. But I don't know if introducing them at the end of the section like this is best.}
 
 
 
 
-
-
-
-
-
-
+% FREEs are used due to their versatility, % customizability?  
+% since by merely changing the arrangement of a FREE's fiber reinforcements, it can be customized to yield a desired motion or force profile without constraining motion to occur exclusively in the direction of force \cite{bishop2015design, connolly2015mechanical, felt2018closed, krishnan2015kinematics, bishop2013force, bruder2017model, sedal2017constitutive}. This property makes them well suited to be combined in parallel, where the forces of individual actuators are superimposed to generate a multidimensional spacial force (cite IROS). 
+% \Dan{I want it to be clear that the approach we use is not specific to FREEs, we have just chosen them to demonstrate our model. But I don't know if introducing them at the end of the section like this is best.}
 
 
 
