First complete draft.

--- a/main.tex
+++ b/main.tex
@@ -81,6 +81,7 @@
 \newcommand{\V}{\vec{V}}
 \newcommand{\tx}[1]{\text{#1}}
 \newcommand{\D}{\bar{\mathcal{D}}}
+\newcommand{\e}{\vec{e}}
 
 \graphicspath{figures/}
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
