--- a/sections/experiments.tex
+++ b/sections/experiments.tex
@@ -1,4 +1,4 @@
-\section{Experiments Completed/Scheduled}   \label{sec:experiments}
+\section{Experiments}   \label{sec:experiments}
 % Experiments
 
 We evaluate the model-based position control approach proposed in section \ref{sec:technical-approach} by applying it to a real system composed of FREE actuators in parallel, and measuring the error in tracking a set of desired end effector states. 
